# internal/response/models.go
@@ -1,0 +1,7 @@
+package response
+
+type AppInfo struct {
+	Version   string `json:"version"`
+	Commit    string `json:"commit"`
+	BuildTime string `json:"build_time"`
+}
